--- a/src/style.css
+++ b/src/style.css
@@ -1,251 +1,218 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:wght@500&family=Source+Sans+Pro:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:wght@500&family=Source+Sans+Pro:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:wght@500&family=Source+Sans+Pro:wght@300&display=swap");
-
-:root {
-  --header: "Oswald", "Playfair Display", Arial, Helvetica;
-  --sub-header: "Playfair Display", "Helvetica Neue", Helvetica;
-  --normal: "Source-San-Pro", sans-serif, Helvetica;
-  --main-color: #03968d;
-  --dark-color: #245d64;
-  --green-color: #6cb136;
-  --red-color: #f50000;
-  --light-main: #e5f4f3;
-  --light-alt: #ebfffe;
-  --highlight-dark: #b3dfdc;
-  --highlight-light: #cceae8;
-}
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata&family=Rubik+Mono+One&display=swap");
 
 * {
-  margin: 0;
   padding: 0;
-  font-family: var(--header);
+  margin: 0;
+  font-family: var(--default);
+  font-size: 1.2rem;
 }
 
-input {
-  border: none;
-  background-image: none;
-  background-color: transparent;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+:root {
+  --black: #0d0d0d;
+  --white: #f2f2f2;
+  --dark-white: #eee;
+  --light-grey: #d9d9d9;
+  --grey: #bfbfbf;
+  --dark-grey: #737373;
+  --dark: #404040;
+
+  --header: "Rubik Mono One", sans-serif;
+  --default: "Inconsolata", monospace;
+
+  --shadow: 10px 10px 10px -10px rgba(64, 64, 64, 0.5);
 }
 
-.container {
+*:focus-visible {
+  outline: 2px solid var(--dark-grey);
+}
+
+h1 {
+  font-family: var(--default);
+  font-size: 3rem;
+}
+
+header {
   display: grid;
-  grid-template-columns: 12em 1fr 15em;
-  grid-template-areas:
-    "navbar navbar navbar"
-    "content content content";
-}
-
-.main-btn {
-  border: 1px solid var(--main-color);
-  border-radius: 30px;
-  padding: 3px 10px;
-  background-color: var(--light-main);
-  color: var(--main-color);
-}
-
-.main-btn:hover {
-  background-color: var(--main-color);
-  color: var(--light-main);
-  cursor: pointer;
+  align-items: center;
+  grid-template-columns: 10rem 1fr 5rem;
+  padding: 1rem 3rem;
+  background-color: var(--white);
 }
 
 .logo {
-  width: 70%;
-  height: auto;
-  margin-bottom: 50px;
-}
-
-.sidebar {
-  grid-column: side;
-  position: absolute;
-  width: 15vh;
-  height: 100vh;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-  background-color: var(--light-alt);
-  color: var(--main-color);
-  box-shadow: 6px 0px 12px -5px #a6b4b3;
-}
-
-.sidebar-top,
-.sidebar-bottom {
-  display: grid;
-  gap: 10px;
-}
-
-.sidebar-top > *:hover,
-.sidebar-bottom > *:hover {
-  color: var(--dark-color);
-  cursor: pointer;
-}
-
-.navbar,
-.content {
-  margin-left: 20vh;
-  padding: 30px 50px 0px 30px;
-}
-
-.navbar {
-  grid-column: navbar;
-  display: grid;
-  align-content: center;
-  background-color: var(--light-main);
   height: 10vh;
-  color: var(--main-color);
-}
-
-.navbar-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
-  margin-bottom: 20px;
-}
-
-.bar {
-  padding: 2px 10px 2px 10px;
-  height: 30px;
-  min-width: 100px;
-  border-radius: 10px;
-  border: none;
-  background-color: var(--light-alt);
-  flex: 1;
-  font-family: var(--normal);
-}
-
-.bar:focus-visible {
-  outline: 1px solid var(--main-color);
 }
 
 .profile {
-  width: 30px;
-  border-radius: 50px;
-}
-
-.navbar-menu {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 30px;
-}
-
-.content {
-  grid-column: content;
-  height: 100vh;
-  background-color: var(--light-alt);
-  display: grid;
-  grid-template-columns: 1fr 15em;
-  grid-template-areas:
-    "tasks teamview"
-    "tasks teamview"
-    "tasks announcements";
-}
-
-.tasks {
-  grid-column: tasks;
-  padding: 0 30px;
-}
-
-.item {
-  display: grid;
-  grid-template-columns: 1fr 10em;
-  gap: 10px;
-  margin-bottom: 0.3em;
-}
-
-.item-left,
-.item-right {
-  display: grid;
-  padding: 10px 15px;
-  background-color: var(--light-main);
-  border-bottom: 1px solid var(--light-alt);
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1em;
-  border-radius: 10px;
-}
-
-.item-left {
-  grid-template-columns: 6em 2em 1fr 2em;
-}
-
-.item-right {
-  grid-template-columns: 1em 5em;
-}
-
-.status {
-  border-radius: 10px;
-  gap: 7px;
-  display: flex;
-  align-items: center;
-  padding: 2px 10px;
-  background-color: #d8e6e6;
-}
-
-.status-color {
-  height: 10px;
-  width: 10px;
-  border-radius: 30px;
-}
-
-.item-left > *,
-.item-right > * {
-  font-family: var(--normal);
-  font-size: 0.75rem;
-}
-
-.item-left:hover,
-.item-right:hover {
-  background-color: var(--highlight-light);
-}
-
-.client-logo {
-  height: 25px;
-  /* width: minmax(auto, 25px); */
-  max-width: 25px;
-  object-fit: cover;
+  height: 5vh;
   border-radius: 50%;
 }
 
-.timer {
-  font-family: var(--normal);
-  text-align: center;
-  background-color: var(--highlight-light);
-  padding: 5px 10px;
-  border-radius: 10%;
-}
-
-.timer:hover {
-  border: 1px solid var(--main-color);
-}
-
-.teamview,
-.announcements {
-  grid-column: teamview;
-  border-radius: 10px;
-  box-shadow: 0px 0px 3px 1px #a6b4b3;
-  padding: 15px 30px 30px 30px;
-}
-
-.announcements {
-  grid-column: announcements;
-  margin-top: 30px;
-  height: fit-content;
+main {
+  min-height: 70vh;
+  background-color: var(--light-grey);
+  padding: 5vh 30vh;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  align-items: center;
+  gap: 2rem;
 }
 
-.announcement {
-  font-family: var(--normal);
-  font-size: 0.7rem;
-  margin-top: 10px;
-  border-bottom: #a6b4b3;
+.search-container {
+  display: grid;
+  grid-template-columns: 2rem 1fr;
+  gap: 2rem;
+}
+
+.search {
+  height: 3rem;
+  padding: 0.2rem 1rem;
+  border: none;
+  border-radius: 1rem;
+  background-color: var(--dark-white);
+  box-shadow: var(--shadow);
+  margin-bottom: 1rem;
+}
+
+.search:hover {
+  background-color: var(--white);
+}
+
+.options-container {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 1rem;
+}
+
+.date-filter {
+  padding: 0.5rem 1rem;
+  width: fit-content;
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow);
+  background-color: var(--white);
+}
+
+.date-filter:hover {
+  background-color: var(--light-grey);
+}
+
+.active,
+.active:hover {
+  color: var(--white);
+  background-color: var(--dark-grey);
+}
+
+.tasks {
+  min-height: 40vh;
+  background-color: var(--white);
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+#inputPreview,
+.add-item {
+  display: grid;
+  padding: 1.5rem 2rem;
+  margin-bottom: 1rem;
+  background-color: var(--dark-white);
+  border-radius: 1rem;
+  box-shadow: var(--shadow);
+  font-family: var(--default);
+  font-size: 1rem;
+}
+
+#inputPreview {
+  grid-template-columns: auto 1fr;
+}
+
+.css-checkbox {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
+.css-checkbox + label {
+  position: relative;
+  font-size: 1rem;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  height: 16px;
+  color: rgb(0, 0, 0);
+}
+.css-checkbox + label::before {
+  content: " ";
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 15px;
+  width: 14px;
+  height: 14px;
+  background-color: white;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(204, 204, 204);
+  border-radius: 3px;
+  box-shadow: none;
+}
+.css-checkbox:checked + label::after {
+  content: " ";
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA0NDggNTEyIj48cGF0aCBmaWxsPSIjNzM3MzczIiBkPSJNMCA5NkMwIDYwLjY1IDI4LjY1IDMyIDY0IDMySDM4NEM0MTkuMyAzMiA0NDggNjAuNjUgNDQ4IDk2VjQxNkM0NDggNDUxLjMgNDE5LjMgNDgwIDM4NCA0ODBINjRDMjguNjUgNDgwIDAgNDUxLjMgMCA0MTZWOTZ6Ii8+PC9zdmc+");
+  background-repeat: no-repeat;
+  background-size: 10px 10px;
+  background-position: center center;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 0px;
+  left: 0px;
+  top: 0px;
+  text-align: center;
+  background-color: transparent;
+  font-size: 1rem;
+  height: 16px;
+  width: 16px;
+}
+
+.add-item {
+  grid-template-columns: 1em auto;
+  gap: 1rem;
+}
+
+.add-item:hover {
+  box-shadow: 0px 0px 10px 0.2px rgba(64, 64, 64, 0.5);
+}
+
+.add-task {
+  background-color: var(--dark-white);
+  border: none;
+}
+
+.add-task:focus-visible {
+  outline: none;
+  background-color: var(--dark-white);
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  gap: 5rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  color: var(--black);
+  background-color: var(--light-grey);
+}
+
+.icon-container {
+  border: 1px solid var(--black);
+  border-radius: 30%;
+  padding: 0.2rem 0.5rem;
 }
